--- a/www/css/hammer.css
+++ b/www/css/hammer.css
@@ -1,15 +1,32 @@
-.polaroid{
+body, html {
+    width:100%;
+    height:100%;
+}
+
+.wrapper {
+    width:100%;
+    height:50%;
+    position: relative;
+    display: table;
     text-align: center;
-    padding: 10px 10px 25px 10px;
-    background: #eee;
-    border: 1px solid #fff;
-    -moz-box-shadow: 0px 2px 15px #333;
-    -webkit-box-shadow:	0px 2px 15px #333;
-    border: 1px solid #dfdfdf;
-    border: 1px solid rgba(96,96,96,0.2);
-    font-family:"damion";
-    font-size:24px;
-    color:#000;
-    padding-bottom:10px;
-    text-shadow:#333;
+}
+
+.wrap {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#square {
+    width:200px;
+    height:200px;
+    background:blue;
+    margin:0 auto;
+}
+
+#circle {
+    border-radius:200px;
+    width:200px;
+    height:200px;
+    background:red;
+    margin:0 auto;
 }
