--- a/www/css/hammer.css
+++ b/www/css/hammer.css
@@ -1,32 +1,13 @@
-body, html {
-    width:100%;
-    height:100%;
+body {
+    padding: 0;
+    margin: 0;
 }
 
-.wrapper {
-    width:100%;
-    height:50%;
-    position: relative;
-    display: table;
-    text-align: center;
+#image {
+    -webkit-transform-origin: 0 0;
 }
 
-.wrap {
-    display: table-cell;
-    vertical-align: middle;
+#image, #wrap {
+    -webkit-transition: 250ms ease-in;
 }
-
-#square {
-    width:200px;
-    height:200px;
-    background:blue;
-    margin:0 auto;
-}
-
-#circle {
-    border-radius:200px;
-    width:200px;
-    height:200px;
-    background:red;
-    margin:0 auto;
-}
+    
